Set min width on title div to prevent overlap

--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  min-width: 15em;
 }
 
 .right {
